Resolves: tdf#120190 Handle multiline string in Formula to Value conversion

... as usual as EditTextObject.

Change-Id: Iddb52593851dcf371318f29318902ae8d4b483d9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143801
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins