sc/source/core/tool/formularesult.cxx
@@ -18,7 +18,7 @@ namespace sc {
 
 FormulaResultValue::FormulaResultValue() : mfValue(0.0), meType(Invalid), mnError(FormulaError::NONE) {}
 FormulaResultValue::FormulaResultValue( double fValue ) : mfValue(fValue), meType(Value), mnError(FormulaError::NONE) {}
-FormulaResultValue::FormulaResultValue( svl::SharedString aStr ) : mfValue(0.0), maString(std::move(aStr)), meType(String), mnError(FormulaError::NONE) {}
+FormulaResultValue::FormulaResultValue( svl::SharedString aStr, bool bMultiLine ) : mfValue(0.0), maString(std::move(aStr)), mbMultiLine(bMultiLine), meType(String), mnError(FormulaError::NONE) {}
 FormulaResultValue::FormulaResultValue( FormulaError nErr ) : mfValue(0.0), meType(Error), mnError(nErr) {}
 
 }
@@ -428,7 +428,7 @@ sc::FormulaResultValue ScFormulaResult::GetResult() const
         return sc::FormulaResultValue();
 
     if (isString(sv))
-        return sc::FormulaResultValue(GetString());
+        return sc::FormulaResultValue(GetString(), IsMultiline());
 
     // Invalid
     return sc::FormulaResultValue();
